--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     />
    <!-- bootstrap -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-   <title>Port Baku</title>
+   <title>Port Baku Mall</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
